streamlit311_err.log
2026-06-05 20:15:07.673 Uvicorn server started on 0.0.0.0:8501
2026-06-05 20:15:30.257 Uncaught app execution
Traceback (most recent call last):
  File "C:\Users\pawar\OneDrive\Desktop\India_Runs_AI_Hackathon\.venv311\Lib\site-packages\streamlit\runtime\scriptrunner\exec_code.py", line 129, in exec_func_with_error_handling
    result = func()
             ^^^^^^
  File "C:\Users\pawar\OneDrive\Desktop\India_Runs_AI_Hackathon\.venv311\Lib\site-packages\streamlit\runtime\scriptrunner\script_runner.py", line 789, in code_to_exec
    exec(code, module.__dict__)  # noqa: S102
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\pawar\OneDrive\Desktop\India_Runs_AI_Hackathon\app.py", line 14, in <module>
    from features import stringify_candidate
  File "C:\Users\pawar\OneDrive\Desktop\India_Runs_AI_Hackathon\src\features.py", line 46
    role_str += f" - {desc.replace('\n', ' ')}"
                                               ^
SyntaxError: f-string expression part cannot include a backslash
